--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <label>Interest Rate</label>
         
                 <div class="input-container">
-                  <input type="number" name="interest" required>
+                  <input type="text" name="interest" required>
                   <button id="btn-form">%</button>
         
                 </div>
@@ -84,10 +84,14 @@
    
 
   
-        <div class="result-container">
-          <img src="./assets/images/illustration-empty.svg" alt="illustration-empty">
-          <h2>Results shown here</h2>
-          <p>Complete the form and click “calculate repayments” to see what your monthly repayments would be.</p>
+        <div class="result-container" id="result-display">
+
+            <img src="./assets/images/illustration-empty.svg" alt="illustration-empty">
+            <h2>Results shown here</h2>
+            <p>Complete the form and click “calculate repayments” to see what your monthly repayments would be.</p> 
+
+          </div>
+
   
         </div>
   
